2011-01-11  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-mklayout.c (console_grub_equivalences_shift): Terminate
	with NULL.
	(console_grub_equivalences_unshift): Likewise.
	Reported by: Daniel Dehennin.

2011-01-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/i386/pc/pxe.c (set_mac_env): Export variable.
	(set_env_limn_ro): Likewise.
	(GRUB_MOD_INIT): Likewise.
	* grub-core/hook/datehook.c (GRUB_MOD_INIT): Likewise. Change to
	ARRAY_SIZE while on it.
	(GRUB_MOD_FINI): Change to ARRAY_SIZE.
	* grub-core/normal/context.c (grub_env_export): Move from here ...
	* grub-core/kern/env.c (grub_env_export): ... here.
	* grub-core/normal/context.c (grub_cmd_export): Skip exporting root and
	prefix.
	* grub-core/kern/main.c (grub_main): Export root and prefix.
	* include/grub/env.h (grub_env_export): Export.
	Reported by: Seth Goldberg.

2011-01-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/multiboot_mbi.c (grub_multiboot_make_mbi):
	Take into account space used by ELF sections and multiboot palette.
	Reported by: Grégoire Sutre.

2011-01-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* BUGS: New file.

2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Pass more appropriate video id to Linux.

	* grub-core/loader/i386/linux.c (grub_linux_setup_video): Use
	grub_video_get_driver_id and variable gfxpayloadforcelfb to
	fill have_vga.
	(grub_linux_boot): Rely on grub_linux_setup_video to fill have_vga and
	shift params->lfb_size.
	* include/grub/i386/linux.h: Make an enume out of have_vga values.

2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-menulst2cfg.c: Add missing include of misc.h.

2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/zfs/zfsinfo.c (grub_cmd_zfs_bootfs): Use comma as
	separator and pass bootpath/devid even if only one of them is available.
	Reported by: Seth Goldberg.

2011-01-10  Vladimir Serbinenko  <phcoder@gmail.com>
